--- a/privacy.htm
+++ b/privacy.htm
@@ -162,16 +162,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-133750.htm" title="揭秘Shadowrocket负载均衡：智能分流背后的技术奥秘与实战配置指南">揭秘Shadowrocket负载均衡：智能分流背后的技术奥秘与实战配置指南</a></li>
-                        <li class="py-2"><a href="/news/article-132483.htm" title="电视端Clash启动失败的终极解决方案：从排查到优化全指南">电视端Clash启动失败的终极解决方案：从排查到优化全指南</a></li>
-                        <li class="py-2"><a href="/news/article-125953.htm" title="突破网络边界：Pure科学上网工具全方位解析与实用指南">突破网络边界：Pure科学上网工具全方位解析与实用指南</a></li>
-                        <li class="py-2"><a href="/news/article-135468.htm" title="斐讯K2路由器安装Clash全攻略：从理论到实践的完整指南">斐讯K2路由器安装Clash全攻略：从理论到实践的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-124953.htm" title="Clash免费节点配置全攻略：从入门到精通的安全代理指南">Clash免费节点配置全攻略：从入门到精通的安全代理指南</a></li>
+                        <li class="py-2"><a href="/news/article-125614.htm" title="突破网络限制：Clash代理工具全面解析与实战指南">突破网络限制：Clash代理工具全面解析与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-133464.htm" title="解密SS科学上网与合购服务：经济实惠的网络自由之路">解密SS科学上网与合购服务：经济实惠的网络自由之路</a></li>
+                        <li class="py-2"><a href="/news/article-130026.htm" title="Surfboard安卓APK：全能网络与应用管理神器深度解析与实操指南">Surfboard安卓APK：全能网络与应用管理神器深度解析与实操指南</a></li>
+                        <li class="py-2"><a href="/news/article-134324.htm" title="解密v2rayng：一款改变网络自由体验的安卓代理神器">解密v2rayng：一款改变网络自由体验的安卓代理神器</a></li>
                         <li class="py-2"><a href="/news/article-129329.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由">手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由</a></li>
-                        <li class="py-2"><a href="/news/article-135096.htm" title="深度探索AC2100 Clash：从安装到精通的全方位网络管理指南">深度探索AC2100 Clash：从安装到精通的全方位网络管理指南</a></li>
-                        <li class="py-2"><a href="/news/article-130379.htm" title="突破网络枷锁：Clash翻墙全攻略与深度体验">突破网络枷锁：Clash翻墙全攻略与深度体验</a></li>
-                        <li class="py-2"><a href="/news/article-129684.htm" title="突破网络边界：云科学上网的终极指南与实战技巧">突破网络边界：云科学上网的终极指南与实战技巧</a></li>
-                        <li class="py-2"><a href="/news/article-134758.htm" title="制霸魔法大陆：《Clash火龙》深度攻略与战术全解">制霸魔法大陆：《Clash火龙》深度攻略与战术全解</a></li>
+                        <li class="py-2"><a href="/news/article-131085.htm" title="V2Ray台湾节点终极指南：从获取到配置的完整攻略">V2Ray台湾节点终极指南：从获取到配置的完整攻略</a></li>
+                        <li class="py-2"><a href="/news/article-132483.htm" title="电视端Clash启动失败的终极解决方案：从排查到优化全指南">电视端Clash启动失败的终极解决方案：从排查到优化全指南</a></li>
+                        <li class="py-2"><a href="/news/article-128991.htm" title="华为路由器科学上网终极指南：从原理到实战配置详解">华为路由器科学上网终极指南：从原理到实战配置详解</a></li>
+                        <li class="py-2"><a href="/news/article-126945.htm" title="全面解析撞击棒：从入门到精通的终极指南">全面解析撞击棒：从入门到精通的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-131433.htm" title="Clash代理流量消耗全解析：原理、影响因素与高效使用指南">Clash代理流量消耗全解析：原理、影响因素与高效使用指南</a></li>
                     </ul>
     </div>
 </div>
@@ -183,7 +183,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
