--- a/date/2025-07/page-3.htm
+++ b/date/2025-07/page-3.htm
@@ -2,7 +2,7 @@
 <html xml:lang="zh-CN" lang="zh-CN">
 
 <head>
-    	<link rel="canonical" href="https://vpnbaike.github.io/news/page-3.htm" />
+    	<link rel="canonical" href="https://vpnbaike.github.io" />
 	<!-- basic -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,14 +11,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<!-- site metas -->
-	<title>新闻资讯 - VPN百科 订阅教程网 - 第4页</title>
+	<title>2025-07归档 - 第2页 - VPN百科 订阅教程网</title>
+		<meta name="keywords" content="2025-07归档VPN百科 订阅教程网" />
+		<meta name="description" content="2025-07归档，当前是第2页" />
 	
     <meta name="author" content="VPN百科 订阅教程网">
     <meta property="og:type" content="webpage" />
-    <meta property="og:url" content="https://vpnbaike.github.io/news/page-3.htm" />
+    <meta property="og:url" content="https://vpnbaike.github.io" />
     <meta property="og:site_name" content="VPN百科 订阅教程网" />
-    <meta property="og:title" content="新闻资讯 - VPN百科 订阅教程网 - 第4页" />
+    <meta property="og:title" content="2025-07归档 - 第2页 - VPN百科 订阅教程网" />
     <meta property="og:image" content="/assets/website/img/clashnodesfree/favicon.ico" />
+        <meta property="og:description" content="2025-07归档，当前是第2页" />
         
 	<!-- bootstrap css -->
 	<link rel="stylesheet" type="text/css" href="/assets/website/css/clashnodesfree/bootstrap.min.css">
@@ -43,7 +46,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="新闻资讯 - VPN百科 订阅教程网 - 第4页">
+    <meta name="apple-mobile-web-app-title" content="2025-07归档 - 第2页 - VPN百科 订阅教程网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -99,12 +102,12 @@
         <div class="container">
             <div class="breadcrumb">
               <a href="/">首页</a> / 
-              <span>新闻资讯</span>
+              <span>2025-07 归档</span>
             </div>
 
             <div class="row">
                 <div class="col-sm-12">
-                    <h1 class="services_taital mb-5">新闻资讯</h1>
+                    <h1 class="services_taital mb-5">2025-07 归档</h1>
                 </div>
             </div>
             <div class="row">
@@ -199,68 +202,8 @@
                             <p class="about_text">引言：当围墙遇见钥匙  在信息如洪流奔涌的数字时代，一堵无形的墙却将无数求知者隔绝于全球互联网之外。当维基百科的页面变成404，当学术论文库显示"无法访问"，当海外社交媒体成为镜中花月——这种被数字铁</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-06-30">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-130026.htm" title="Surfboard安卓APK：全能网络与应用管理神器深度解析与实操指南" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/ed216feb620e857e62e319edb7810fbd.webp" alt="Surfboard安卓APK：全能网络与应用管理神器深度解析与实操指南">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-130026.htm" title="Surfboard安卓APK：全能网络与应用管理神器深度解析与实操指南" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">Surfboard安卓APK：全能网络与应用管理神器深度解析与实操指南</h3>
-                            </a>
-                            <p class="about_text">引言：为何选择Surfboard？  在移动互联网时代，安卓设备的网络管理与应用优化已成为用户刚需。Surfboard安卓APK以其"轻量级设计、重型武器功能"的独特定位，迅速成为科技爱好者和普通用户</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-06-29">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-129684.htm" title="突破网络边界：云科学上网的终极指南与实战技巧" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/2c41239ac39028609af4b6e4c787f732.webp" alt="突破网络边界：云科学上网的终极指南与实战技巧">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-129684.htm" title="突破网络边界：云科学上网的终极指南与实战技巧" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">突破网络边界：云科学上网的终极指南与实战技巧</h3>
-                            </a>
-                            <p class="about_text">引言：数字时代的自由之钥  在信息全球化的今天，互联网本应是无国界的知识海洋，但现实中的网络封锁、地域限制和隐私威胁却如同无形的围墙。云科学上网技术正是打破这些壁垒的利器——它不仅是访问被屏蔽内容的通</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-06-28">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-129329.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/67515d5613f54ad595999fa7d2110788.webp" alt="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-129329.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由</h3>
-                            </a>
-                            <p class="about_text">引言：当网络自由成为刚需  在全球化数字浪潮中，地理边界正被数据流重新定义。无论是跨境协作的职场人士、渴望多元信息的求知者，还是热衷国际娱乐内容的普通用户，稳定高效的网络连接已成为数字时代的"氧气"。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-06-27">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-128991.htm" title="华为路由器科学上网终极指南：从原理到实战配置详解" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/9a0122327fa66b90ff72b270313cf8e6.webp" alt="华为路由器科学上网终极指南：从原理到实战配置详解">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-128991.htm" title="华为路由器科学上网终极指南：从原理到实战配置详解" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">华为路由器科学上网终极指南：从原理到实战配置详解</h3>
-                            </a>
-                            <p class="about_text">引言：当网络边界遇上技术突围  在数字时代的地缘版图中，互联网的国界远比地理疆域更为复杂。当全球化的信息浪潮遭遇人为设置的访问壁垒，华为路由器搭载的科学上网技术便成为破壁的利器。本文不仅是一份详尽的配</p>
-                        </div>
-                    </div>
                                         
-                    <ul class="pagination"><li><a href="/news/page-2.htm">&laquo;</a></li> <li><a href="/news/">1</a></li><li><a href="/news/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/news/page-4.htm">4</a></li><li><a href="/news/page-5.htm">5</a></li> <li><a href="/news/page-4.htm">&raquo;</a></li></ul>                </div>
+                    <ul class="pagination"><li><a href="/date/2025-07/page-2.htm">&laquo;</a></li> <li><a href="/date/2025-07/">1</a></li><li><a href="/date/2025-07/page-2.htm">2</a></li><li class="active"><span>3</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
     <div class="panel-heading">
@@ -268,16 +211,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-135096.htm" title="深度探索AC2100 Clash：从安装到精通的全方位网络管理指南">深度探索AC2100 Clash：从安装到精通的全方位网络管理指南</a></li>
-                        <li class="py-2"><a href="/news/article-134324.htm" title="解密v2rayng：一款改变网络自由体验的安卓代理神器">解密v2rayng：一款改变网络自由体验的安卓代理神器</a></li>
-                        <li class="py-2"><a href="/news/article-126945.htm" title="全面解析撞击棒：从入门到精通的终极指南">全面解析撞击棒：从入门到精通的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-138855.htm" title="V2Ray免费节点获取与使用全攻略：从入门到精通">V2Ray免费节点获取与使用全攻略：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-132128.htm" title="SSR与V2Ray深度对比：从技术原理到实战选择的终极指南">SSR与V2Ray深度对比：从技术原理到实战选择的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-126271.htm" title="解锁全球网络自由：AC1200GU路由器科学上网完全攻略">解锁全球网络自由：AC1200GU路由器科学上网完全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-134758.htm" title="制霸魔法大陆：《Clash火龙》深度攻略与战术全解">制霸魔法大陆：《Clash火龙》深度攻略与战术全解</a></li>
+                        <li class="py-2"><a href="/news/article-132483.htm" title="电视端Clash启动失败的终极解决方案：从排查到优化全指南">电视端Clash启动失败的终极解决方案：从排查到优化全指南</a></li>
                         <li class="py-2"><a href="/news/article-137436.htm" title="斐讯K3路由器科学上网全攻略：从基础设置到高级配置详解">斐讯K3路由器科学上网全攻略：从基础设置到高级配置详解</a></li>
+                        <li class="py-2"><a href="/news/article-124311.htm" title="深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南">深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南</a></li>
+                        <li class="py-2"><a href="/news/article-134324.htm" title="解密v2rayng：一款改变网络自由体验的安卓代理神器">解密v2rayng：一款改变网络自由体验的安卓代理神器</a></li>
                         <li class="py-2"><a href="/news/article-127945.htm" title="伪造IP冲突：网络安全的隐形杀手与全面防御指南">伪造IP冲突：网络安全的隐形杀手与全面防御指南</a></li>
-                        <li class="py-2"><a href="/news/article-128644.htm" title="深度掌握Shadowrocket批量导入：从入门到精通的完整指南">深度掌握Shadowrocket批量导入：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-131433.htm" title="Clash代理流量消耗全解析：原理、影响因素与高效使用指南">Clash代理流量消耗全解析：原理、影响因素与高效使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-123350.htm" title="突破网络边界：全方位指南教你如何添加科学上网节点">突破网络边界：全方位指南教你如何添加科学上网节点</a></li>
+                        <li class="py-2"><a href="/news/article-129684.htm" title="突破网络边界：云科学上网的终极指南与实战技巧">突破网络边界：云科学上网的终极指南与实战技巧</a></li>
+                        <li class="py-2"><a href="/news/article-130732.htm" title="深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南">深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南</a></li>
+                        <li class="py-2"><a href="/news/article-125614.htm" title="突破网络限制：Clash代理工具全面解析与实战指南">突破网络限制：Clash代理工具全面解析与实战指南</a></li>
                     </ul>
     </div>
 </div>
