14 6 7 ying cun de iPhone 14 Plus 6 1 ying cun de iPhone 14 Pro yi ji 6 7 ying cun de iPhone

--- a/client.htm
+++ b/client.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-132128.htm" title="SSR与V2Ray深度对比：从技术原理到实战选择的终极指南">SSR与V2Ray深度对比：从技术原理到实战选择的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-142372.htm" title="突破网络边界：flyzy小站科学上网全攻略与深度体验">突破网络边界：flyzy小站科学上网全攻略与深度体验</a></li>
-                        <li class="py-2"><a href="/news/article-137081.htm" title="梅林固件与V2Ray离线配置全攻略：解锁无网环境下的安全通道">梅林固件与V2Ray离线配置全攻略：解锁无网环境下的安全通道</a></li>
-                        <li class="py-2"><a href="/news/article-137436.htm" title="斐讯K3路由器科学上网全攻略：从基础设置到高级配置详解">斐讯K3路由器科学上网全攻略：从基础设置到高级配置详解</a></li>
-                        <li class="py-2"><a href="/news/article-139937.htm" title="安卓用户必备：2024年最全科学上网工具指南与深度体验报告">安卓用户必备：2024年最全科学上网工具指南与深度体验报告</a></li>
-                        <li class="py-2"><a href="/news/article-135639.htm" title="国内使用Clash代理工具全解析：合法风险、实用指南与深度思考">国内使用Clash代理工具全解析：合法风险、实用指南与深度思考</a></li>
-                        <li class="py-2"><a href="/news/article-142726.htm" title="2018年8月：突破网络边界的终极科学上网指南">2018年8月：突破网络边界的终极科学上网指南</a></li>
                         <li class="py-2"><a href="/news/article-132483.htm" title="电视端Clash启动失败的终极解决方案：从排查到优化全指南">电视端Clash启动失败的终极解决方案：从排查到优化全指南</a></li>
-                        <li class="py-2"><a href="/news/article-133750.htm" title="揭秘Shadowrocket负载均衡：智能分流背后的技术奥秘与实战配置指南">揭秘Shadowrocket负载均衡：智能分流背后的技术奥秘与实战配置指南</a></li>
+                        <li class="py-2"><a href="/news/article-138855.htm" title="V2Ray免费节点获取与使用全攻略：从入门到精通">V2Ray免费节点获取与使用全攻略：从入门到精通</a></li>
+                        <li class="py-2"><a href="/news/article-143789.htm" title="彻底解决v2ray PAC失效难题：从原理到实战的完整指南">彻底解决v2ray PAC失效难题：从原理到实战的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-135639.htm" title="国内使用Clash代理工具全解析：合法风险、实用指南与深度思考">国内使用Clash代理工具全解析：合法风险、实用指南与深度思考</a></li>
+                        <li class="py-2"><a href="/news/article-136723.htm" title="全面解析搬瓦工V2Ray域名：从申请到配置的完整指南">全面解析搬瓦工V2Ray域名：从申请到配置的完整指南</a></li>
                         <li class="py-2"><a href="/news/article-142004.htm" title="掌握Clash的秘诀：高效记忆与灵活运用的终极指南">掌握Clash的秘诀：高效记忆与灵活运用的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-132867.htm" title="手机端高效翻墙指南：V2Ray科学上网全攻略">手机端高效翻墙指南：V2Ray科学上网全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-137436.htm" title="斐讯K3路由器科学上网全攻略：从基础设置到高级配置详解">斐讯K3路由器科学上网全攻略：从基础设置到高级配置详解</a></li>
+                        <li class="py-2"><a href="/news/article-141646.htm" title="全面解析6s科学上网：解锁数字世界的钥匙与使用全攻略">全面解析6s科学上网：解锁数字世界的钥匙与使用全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-142726.htm" title="2018年8月：突破网络边界的终极科学上网指南">2018年8月：突破网络边界的终极科学上网指南</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
