--- a/date/2025-07/index.htm
+++ b/date/2025-07/index.htm
@@ -271,16 +271,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-134758.htm" title="制霸魔法大陆：《Clash火龙》深度攻略与战术全解">制霸魔法大陆：《Clash火龙》深度攻略与战术全解</a></li>
-                        <li class="py-2"><a href="/news/article-140293.htm" title="全面指南：如何根据需求选择最适合的Clash版本">全面指南：如何根据需求选择最适合的Clash版本</a></li>
-                        <li class="py-2"><a href="/news/article-132867.htm" title="手机端高效翻墙指南：V2Ray科学上网全攻略">手机端高效翻墙指南：V2Ray科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-135468.htm" title="斐讯K2路由器安装Clash全攻略：从理论到实践的完整指南">斐讯K2路由器安装Clash全攻略：从理论到实践的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-141646.htm" title="全面解析6s科学上网：解锁数字世界的钥匙与使用全攻略">全面解析6s科学上网：解锁数字世界的钥匙与使用全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-139233.htm" title="宝塔面板与V2Ray完美共存：一站式服务器代理解决方案深度解析">宝塔面板与V2Ray完美共存：一站式服务器代理解决方案深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-132483.htm" title="电视端Clash启动失败的终极解决方案：从排查到优化全指南">电视端Clash启动失败的终极解决方案：从排查到优化全指南</a></li>
-                        <li class="py-2"><a href="/news/article-142004.htm" title="掌握Clash的秘诀：高效记忆与灵活运用的终极指南">掌握Clash的秘诀：高效记忆与灵活运用的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-144518.htm" title="如何挑选高性价比服务器搭建V2Ray？一份实用指南">如何挑选高性价比服务器搭建V2Ray？一份实用指南</a></li>
                         <li class="py-2"><a href="/news/article-137081.htm" title="梅林固件与V2Ray离线配置全攻略：解锁无网环境下的安全通道">梅林固件与V2Ray离线配置全攻略：解锁无网环境下的安全通道</a></li>
-                        <li class="py-2"><a href="/news/article-140653.htm" title="深度解析：Quantumult中间按钮消失的全面解决方案">深度解析：Quantumult中间按钮消失的全面解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-135096.htm" title="深度探索AC2100 Clash：从安装到精通的全方位网络管理指南">深度探索AC2100 Clash：从安装到精通的全方位网络管理指南</a></li>
+                        <li class="py-2"><a href="/news/article-141646.htm" title="全面解析6s科学上网：解锁数字世界的钥匙与使用全攻略">全面解析6s科学上网：解锁数字世界的钥匙与使用全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-139937.htm" title="安卓用户必备：2024年最全科学上网工具指南与深度体验报告">安卓用户必备：2024年最全科学上网工具指南与深度体验报告</a></li>
+                        <li class="py-2"><a href="/news/article-134758.htm" title="制霸魔法大陆：《Clash火龙》深度攻略与战术全解">制霸魔法大陆：《Clash火龙》深度攻略与战术全解</a></li>
+                        <li class="py-2"><a href="/news/article-139233.htm" title="宝塔面板与V2Ray完美共存：一站式服务器代理解决方案深度解析">宝塔面板与V2Ray完美共存：一站式服务器代理解决方案深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-137436.htm" title="斐讯K3路由器科学上网全攻略：从基础设置到高级配置详解">斐讯K3路由器科学上网全攻略：从基础设置到高级配置详解</a></li>
+                        <li class="py-2"><a href="/news/article-131433.htm" title="Clash代理流量消耗全解析：原理、影响因素与高效使用指南">Clash代理流量消耗全解析：原理、影响因素与高效使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-143076.htm" title="掌握Quantumult X的图片处理艺术：从基础配置到高阶玩法全解析">掌握Quantumult X的图片处理艺术：从基础配置到高阶玩法全解析</a></li>
                     </ul>
     </div>
 </div>
@@ -292,7 +292,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
