--- a/date/2025-07/page-3.htm
+++ b/date/2025-07/page-3.htm
@@ -211,16 +211,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-136723.htm" title="全面解析搬瓦工V2Ray域名：从申请到配置的完整指南">全面解析搬瓦工V2Ray域名：从申请到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-133464.htm" title="解密SS科学上网与合购服务：经济实惠的网络自由之路">解密SS科学上网与合购服务：经济实惠的网络自由之路</a></li>
                         <li class="py-2"><a href="/news/article-142372.htm" title="突破网络边界：flyzy小站科学上网全攻略与深度体验">突破网络边界：flyzy小站科学上网全攻略与深度体验</a></li>
                         <li class="py-2"><a href="/news/article-139937.htm" title="安卓用户必备：2024年最全科学上网工具指南与深度体验报告">安卓用户必备：2024年最全科学上网工具指南与深度体验报告</a></li>
-                        <li class="py-2"><a href="/news/article-142004.htm" title="掌握Clash的秘诀：高效记忆与灵活运用的终极指南">掌握Clash的秘诀：高效记忆与灵活运用的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-141646.htm" title="全面解析6s科学上网：解锁数字世界的钥匙与使用全攻略">全面解析6s科学上网：解锁数字世界的钥匙与使用全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-138452.htm" title="终极指南：Shadowrocket在安卓电视上的完美配置与优化">终极指南：Shadowrocket在安卓电视上的完美配置与优化</a></li>
-                        <li class="py-2"><a href="/news/article-137436.htm" title="斐讯K3路由器科学上网全攻略：从基础设置到高级配置详解">斐讯K3路由器科学上网全攻略：从基础设置到高级配置详解</a></li>
-                        <li class="py-2"><a href="/news/article-141010.htm" title="手把手教你解决V2Ray安装失败的疑难杂症">手把手教你解决V2Ray安装失败的疑难杂症</a></li>
-                        <li class="py-2"><a href="/news/article-132128.htm" title="SSR与V2Ray深度对比：从技术原理到实战选择的终极指南">SSR与V2Ray深度对比：从技术原理到实战选择的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-138855.htm" title="V2Ray免费节点获取与使用全攻略：从入门到精通">V2Ray免费节点获取与使用全攻略：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-135639.htm" title="国内使用Clash代理工具全解析：合法风险、实用指南与深度思考">国内使用Clash代理工具全解析：合法风险、实用指南与深度思考</a></li>
+                        <li class="py-2"><a href="/news/article-140653.htm" title="深度解析：Quantumult中间按钮消失的全面解决方案">深度解析：Quantumult中间按钮消失的全面解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-144518.htm" title="如何挑选高性价比服务器搭建V2Ray？一份实用指南">如何挑选高性价比服务器搭建V2Ray？一份实用指南</a></li>
+                        <li class="py-2"><a href="/news/article-138150.htm" title="突破网络边界：2023最新科学上网全攻略与深度解析">突破网络边界：2023最新科学上网全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-135468.htm" title="斐讯K2路由器安装Clash全攻略：从理论到实践的完整指南">斐讯K2路由器安装Clash全攻略：从理论到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-143789.htm" title="彻底解决v2ray PAC失效难题：从原理到实战的完整指南">彻底解决v2ray PAC失效难题：从原理到实战的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-137793.htm" title="安卓设备科学上网全攻略：轻松解锁豆瓣优质内容">安卓设备科学上网全攻略：轻松解锁豆瓣优质内容</a></li>
                     </ul>
     </div>
 </div>
@@ -232,7 +232,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
