--- a/privacy.htm
+++ b/privacy.htm
@@ -162,16 +162,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-135096.htm" title="深度探索AC2100 Clash：从安装到精通的全方位网络管理指南">深度探索AC2100 Clash：从安装到精通的全方位网络管理指南</a></li>
-                        <li class="py-2"><a href="/news/article-136723.htm" title="全面解析搬瓦工V2Ray域名：从申请到配置的完整指南">全面解析搬瓦工V2Ray域名：从申请到配置的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-139582.htm" title="SSR与V2Ray的整合艺术：构建自由与安全并重的网络通道">SSR与V2Ray的整合艺术：构建自由与安全并重的网络通道</a></li>
-                        <li class="py-2"><a href="/news/article-137081.htm" title="梅林固件与V2Ray离线配置全攻略：解锁无网环境下的安全通道">梅林固件与V2Ray离线配置全攻略：解锁无网环境下的安全通道</a></li>
-                        <li class="py-2"><a href="/news/article-138452.htm" title="终极指南：Shadowrocket在安卓电视上的完美配置与优化">终极指南：Shadowrocket在安卓电视上的完美配置与优化</a></li>
-                        <li class="py-2"><a href="/news/article-133750.htm" title="揭秘Shadowrocket负载均衡：智能分流背后的技术奥秘与实战配置指南">揭秘Shadowrocket负载均衡：智能分流背后的技术奥秘与实战配置指南</a></li>
                         <li class="py-2"><a href="/news/article-142726.htm" title="2018年8月：突破网络边界的终极科学上网指南">2018年8月：突破网络边界的终极科学上网指南</a></li>
+                        <li class="py-2"><a href="/news/article-142372.htm" title="突破网络边界：flyzy小站科学上网全攻略与深度体验">突破网络边界：flyzy小站科学上网全攻略与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-138150.htm" title="突破网络边界：2023最新科学上网全攻略与深度解析">突破网络边界：2023最新科学上网全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-134324.htm" title="解密v2rayng：一款改变网络自由体验的安卓代理神器">解密v2rayng：一款改变网络自由体验的安卓代理神器</a></li>
+                        <li class="py-2"><a href="/news/article-144518.htm" title="如何挑选高性价比服务器搭建V2Ray？一份实用指南">如何挑选高性价比服务器搭建V2Ray？一份实用指南</a></li>
+                        <li class="py-2"><a href="/news/article-142004.htm" title="掌握Clash的秘诀：高效记忆与灵活运用的终极指南">掌握Clash的秘诀：高效记忆与灵活运用的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-136009.htm" title="深度剖析：Clash代理工具安装失败的根源与终极解决方案">深度剖析：Clash代理工具安装失败的根源与终极解决方案</a></li>
                         <li class="py-2"><a href="/news/article-137793.htm" title="安卓设备科学上网全攻略：轻松解锁豆瓣优质内容">安卓设备科学上网全攻略：轻松解锁豆瓣优质内容</a></li>
-                        <li class="py-2"><a href="/news/article-132128.htm" title="SSR与V2Ray深度对比：从技术原理到实战选择的终极指南">SSR与V2Ray深度对比：从技术原理到实战选择的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-135468.htm" title="斐讯K2路由器安装Clash全攻略：从理论到实践的完整指南">斐讯K2路由器安装Clash全攻略：从理论到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-132867.htm" title="手机端高效翻墙指南：V2Ray科学上网全攻略">手机端高效翻墙指南：V2Ray科学上网全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-143430.htm" title="赤瞳clash深度攻略：从入门到精通的全面指南">赤瞳clash深度攻略：从入门到精通的全面指南</a></li>
                     </ul>
     </div>
 </div>
@@ -183,7 +183,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
